Added functionality for controlling the font sizes of the displayed quotes using buttons. The buttons adapt to light and dark mode. Though the UI needs some updates to make it look more visually appealing.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <option value="Philosophy" id="Philosophy">Philosophy</option>
             <option value="Sports" id="Sports">Sports</option>
         </select>
+        <img class="zoom_in" src="./images/zoom_in.png" alt="zoom in button">
+        <img class="zoom_out" src="./images/zoom_out.png" alt="zoom out button">
     </div>
     <div class="main">
         <p>
