Improvement of UI along with better responsiveness to variable screen sizes.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,27 @@
         <img class="zoom_in" src="./images/zoom_in.png" alt="zoom in button">
         <img class="zoom_out" src="./images/zoom_out.png" alt="zoom out button">
     </div>
-    <div class="main">
-        <p>
-            <span class="displayQuote"></span>
-        </p>
-        <p>
-            <span class="display"></span>
-        </p>
+    <div class="controller">
+        <div class="controller1">
+            <button id="prev">&lt;</button>
+        </div>
+        <div class="main">
+            <div class="quote">
+                <p>
+                    <span class="displayQuote"></span>
+                </p>
+            </div>
+            <div class="author">
+                <p>
+                    <span class="display"></span>
+                </p>
+            </div>
+        </div>
+        <div class="controller2">
+            <button id="next">&gt;</button>
+        </div>
     </div>
     <div class="buttons">
-        <button id="prev">Prev</button>
-        <button id="next">Next</button>
         <button id="rand">Random quote</button>
     </div>
     <script src="script.js"></script>
