Further UI improvements. Added some cool hover effects.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>change on select</title>
+    <title>Quote generator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
     <div class="selection">
         <img class="bulb" src="./images/bulbOn.png" alt="glowing/dim bulb">
         <select name="genre" id="genre">
-            <option id="Choice">Choose genre</option>
+            <option id="Choice" style="background-color: lightgrey;">Choose genre</option>
             <option value="Science" id="Science">Science</option>
             <option value="Arts" id="Arts">Arts</option>
             <option value="Philosophy" id="Philosophy">Philosophy</option>
